--- a/explore.html
+++ b/explore.html
@@ -74,8 +74,8 @@
             <li><a href="exhibitions.html">Exhibitions</a></li>
             <li><a href="explore.html">Explore</a></li>
             <li><a href="get_involved.html">Get involved</a></li>
-            <li><a href="visit.html">Visit</a></li>
             <li><a href="about_us.html">About us</a></li>
+            <li><a href="visit.html">Visit</a></li>
           </ul>
           <ul class="navbar-menu-list">
             <li>
@@ -88,10 +88,10 @@
               <a href="get_involved.html" class="menu-link">Get involved</a>
             </li>
             <li>
-              <a href="visit.html" class="menu-link">Visit</a>
+              <a href="about_us.html" class="menu-link">About us</a>
             </li>
             <li>
-              <a href="about_us.html" class="menu-link">About us</a>
+              <a href="visit.html" class="menu-link">Visit</a>
             </li>
           </ul>
         </div>
@@ -108,15 +108,16 @@
                 <h1 class="main-heading">For kids</h1>
               </div>
               <hr class="heading-divider" />
-              <p class="main-heading-lead">— Are you a young person looking to learn more about science? Come
-                on down to our museum, there’s plenty to see and do</p>
+              <p class="main-heading-lead">— Are you a young person looking to learn more about science?</p>
             </div>
             <div class="kids-container">
-              <figure class="image-box" id="image-box-kids">
+              <div id="image-box-kids"></div>
+              <!-- <figure class="image-box" >
                 <img src="images/museum-1.jpg" />
-              </figure>
+              </figure> -->
               <div class="info-box" id="info-box-kids">
-                <!-- <h3 class="info-box-heading">For Kids</h3> -->
+                <h3 class="info-box-heading">Come
+                  on down to our museum, there’s plenty to see and do</h3>
                 <p>
                   You can learn about Newtonian physics from our bumper swing, or
                   why not travel back in time and meet our resident Woolly Mammoth?
@@ -139,7 +140,7 @@
               <!-- <hr class="clubs-divider" /> -->
               <div class="clubs-container">
                 <div>
-                  <h4 class="info-box-sub-heading" id="club-1-heading">Young Stars Club</h4>
+                  <h4 id="club-1-heading">Young Stars Club</h4>
                   <p>
                     We have the <strong>Young Stars Club</strong> which meets once a week
                     on a <em>Saturday between 10:00 and 13:00</em> where you’ll get to explore
@@ -168,7 +169,7 @@
               <hr class="clubs-divider" />
               <div class="clubs-container" id="holiday-club">
                 <div>
-                  <h4 class="info-box-sub-heading" id="club-2-heading">The Holiday Club</h4>
+                  <h4 id="club-2-heading">The Holiday Club</h4>
                   <p>
                     During the school holidays we run <strong>The Holiday Club</strong> where
                     you can join other children your age to go on a journey of
@@ -207,7 +208,7 @@
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
-                <h1 class="main-heading">Teachers & researchers</h1>
+                <h2 class="main-heading">Teachers & researchers</h2>
               </div>
               <hr class="heading-divider" />
               <p class="main-heading-lead">— Are you a young person looking to learn more about science? Come
@@ -215,7 +216,7 @@
             </div>
             <div class="research-grid">
               <div class="info-box" id="item-4">
-                <h3 class="info-box-heading">For Teachers</h3>
+                <h5 class="info-box-heading">For Teachers</h5>
                 <p>
                   As a community-driven museum, we want to work with schools to
                   create places of learning and exploring.
@@ -232,7 +233,7 @@
                 </p>
               </div>
               <div class="info-box" id="item-5">
-                <h3 class="info-box-heading">For Researchers</h3>
+                <h5 class="info-box-heading">For Researchers</h5>
                 <p>
                   Are you looking to get involved with our team of researchers and
                   academics?
@@ -251,7 +252,7 @@
                 <a href="contact.html" class="button">Get in touch</a>
               </div>
             </div>
-            
+
           </section>
 
         </div>
@@ -282,7 +283,7 @@
   <footer>
     <div class="footer-wrapper">
       <div class="footer-container fi1">
-        <h5 class="footer-heading">CONNECT:</h5>
+        <h6 class="footer-heading">CONNECT:</h6>
         <ul class="footer-icon-list">
           <li>
             <a href="https://www.facebook.com/"><span class="fa fa-facebook-f footer-icon"></span></a>
@@ -299,7 +300,7 @@
         </ul>
       </div>
       <div class="footer-container">
-        <h5 class="footer-heading">HOURS:</h5>
+        <h6 class="footer-heading">HOURS:</h6>
         <div class="footer-hours-wrapper">
           <ul class="footer-list">
             <li>Monday:</li>
@@ -323,7 +324,7 @@
       </div>
       <div class="footer-container">
         <div>
-          <h5 class="footer-heading">LOCATION:</h5>
+          <h6 class="footer-heading">LOCATION:</h6>
           <p>Nygårdsgaten 112</p>
           <p>5008 Bergen, Norway</p>
         </div>
@@ -332,7 +333,7 @@
         </a>
       </div>
       <div class="footer-container">
-        <h5 class="footer-heading">CONTACT & SUPPORT:</h5>
+        <h6 class="footer-heading">CONTACT & SUPPORT:</h6>
         <ul class="footer-list">
           <li><a href="about_us.html">About Us</a></li>
           <li><a href="visit.html#facilities">Facilities</a></li>
