--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <li><a href="exhibitions.html">Exhibitions</a></li>
             <li><a href="explore.html">Explore</a></li>
             <li><a href="get_involved.html">Get involved</a></li>
-            <li><a href="visit.html">Visit</a></li>
             <li><a href="about_us.html">About us</a></li>
+            <li><a href="visit.html">Visit</a></li>
           </ul>
           <ul class="navbar-menu-list">
             <li>
@@ -90,10 +90,10 @@
               <a href="get_involved.html" class="menu-link">Get involved</a>
             </li>
             <li>
-              <a href="visit.html" class="menu-link">Visit</a>
+              <a href="about_us.html" class="menu-link">About us</a>
             </li>
             <li>
-              <a href="about_us.html" class="menu-link">About us</a>
+              <a href="visit.html" class="menu-link">Visit</a>
             </li>
           </ul>
         </div>
@@ -126,7 +126,7 @@
         <h3 class="categories-heading">EXPLORE <em>more than 1000</em> EXHIBITIONS</h3>
         <div class="categories-wrapper">
           <div class="category-box" id="cosmology">
-            <a href="exhibitions.html#cosmology-anchor">
+            <a href="exhibitions.html#cosmology-space">
               <div class="category-box-content">
                 <figure class="category-planet-icon">
                   <img src="images/icons/planet_white.png" alt="icon of a planet" class="category-planet-icon" />
@@ -137,7 +137,7 @@
           </div>
 
           <div class="category-box" id="evolution">
-            <a href="exhibitions.html#evolution-anchor">
+            <a href="exhibitions.html#evolution-space">
               <div class="category-box-content">
                 <figure><span class="fa fa-dna category-icon"></span></figure>
                 <figcaption class="category-caption">EVOLUTION</figcaption>
@@ -146,7 +146,7 @@
           </div>
 
           <div class="category-box" id="biology">
-            <a href="exhibitions.html#biology-anchor">
+            <a href="exhibitions.html#biology-space">
               <div class="category-box-content">
                 <figure><span class="fa fa-microscope category-icon"></span></figure>
                 <figcaption class="category-caption">BIOLOGY & MEDICINE</figcaption>
@@ -154,7 +154,7 @@
             </a>
           </div>
           <div class="category-box" id="robotics">
-            <a href="exhibitions.html#robotics-anchor">
+            <a href="exhibitions.html#robotics-space">
               <div class="category-box-content">
                 <figure><span class="fa fa-robot category-icon"></span></figure>
                 <figcaption class="category-caption">ROBOTICS & AI</figcaption>
@@ -162,7 +162,7 @@
             </a>
           </div>
           <div class="category-box" id="ecology">
-            <a href="exhibitions.html#ecology-anchor">
+            <a href="exhibitions.html#ecology-space">
               <div class="category-box-content">
                 <figure><span class="fa fa-globe-americas category-icon"></span></figure>
                 <figcaption class="category-caption">ECOLOGY</figcaption>
@@ -170,7 +170,7 @@
             </a>
           </div>
           <div class="category-box" id="events">
-            <a href="#news-anchor">
+            <a href="exhibitions.html#special-space">
               <div class="category-box-content">
                 <figure><span class="fa fa-rocket category-icon"></span></figure>
                 <figcaption class="category-caption">SPECIAL EVENTS</figcaption>
@@ -199,12 +199,8 @@
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
-                <h1 class="main-heading">News & special events</h1>
+                <h4 class="main-heading">News & special events</h4>
               </div>
-              <hr class="heading-divider" />
-              <p class="main-heading-lead">— Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum
-              </p>
             </div>
             <!-- <div id="news-anchor"></div> -->
             <div class="slider-wrapper">
@@ -294,12 +290,8 @@
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
-                <h1 class="main-heading">Join one of our children clubs</h1>
+                <h4 class="main-heading">Join one of our children clubs</h4>
               </div>
-              <hr class="heading-divider" />
-              <p class="main-heading-lead"> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum
-              </p>
             </div>
             <div class="clubs-wrapper">
               <figure class="clubs">
