--- a/get_involved.html
+++ b/get_involved.html
@@ -73,7 +73,7 @@
             <li><a href="explore.html">Explore</a></li>
             <li><a href="get_involved.html">Get involved</a></li>
             <li><a href="about_us.html">About us</a></li>
-            <li><a href="visit.html">Visit</a></li>        
+            <li><a href="visit.html">Visit</a></li>
           </ul>
           <ul class="navbar-menu-list">
             <li>
@@ -90,7 +90,7 @@
             </li>
             <li>
               <a href="visit.html" class="menu-link">Visit</a>
-            </li>    
+            </li>
           </ul>
         </div>
       </nav>
@@ -104,12 +104,15 @@
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
-                <h1 class="main-heading">You can support our museum in various ways</h1>
+                <div>
+                  <h1 class="main-heading">You can support our museum in various ways</h1>
+                  <p class="main-heading-lead">— In order for us to create the best possible museum, we need your
+                    contribution
+                  </p>
+                </div>
               </div>
               <hr class="heading-divider" />
-              <p class="main-heading-lead">— In order for us to create the best possible museum, we need your
-                contribution
-              </p>
+
             </div>
             <div class="support-grid">
               <div class="info-box" id="item-1">
