--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="hero-content">
           <hgroup>
             <h1 class="hero-heading">WELCOME to the Science Museum!</h1>
-            <h2 class="hero-sub-heading">The place where science comes to life</h2>
+            <h2 class="hero-sub-heading">— The place where science comes to life</h2>
           </hgroup>
           <a href="https://www.ticketmaster.com/" class="button hero-button">
             Learn more
