--- a/get_involved.html
+++ b/get_involved.html
@@ -104,15 +104,12 @@
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
-                <div>
-                  <h1 class="main-heading">You can support our museum in various ways</h1>
-                  <p class="main-heading-lead">— In order for us to create the best possible museum, we need your
-                    contribution
-                  </p>
-                </div>
+                <h1 class="main-heading">You can support our museum in various ways</h1>
               </div>
               <hr class="heading-divider" />
-
+              <p class="main-heading-lead">— In order for us to create the best possible museum, we need your
+                contribution
+              </p>
             </div>
             <div class="support-grid">
               <div class="info-box" id="item-1">
@@ -156,7 +153,7 @@
                   the museum.
                 </p>
               </div>
-              <div class="cta-wrapper info-box" id="item-4">
+              <div class="cta-wrapper" id="item-4">
                 <p>Do you want to help us out?</p>
                 <a href="contact.html" class="button">Get in touch
                 </a>
