--- a/explore.html
+++ b/explore.html
@@ -247,7 +247,7 @@
               </div>
               <!-- <div class="image-box" id="item-6">
               </div> -->
-              <div class="cta-wrapper info-box" id="item-6">
+              <div class="cta-wrapper" id="item-6">
                 <p>Are you a teacher or a researcher?</p>
                 <a href="contact.html" class="button">Get in touch</a>
               </div>
