main-headings improved

--- a/about_us.html
+++ b/about_us.html
@@ -151,7 +151,7 @@
                   us.
                 </p>
               </div>
-              <div class="cta-wrapper info-box item-5">
+              <div class="cta-wrapper item-5">
                 <p>Do you have any questions?</p>
                 <a href="contact.html" class="button">
                   Get in touch
