--- a/explore.html
+++ b/explore.html
@@ -140,14 +140,14 @@
               <!-- <hr class="clubs-divider" /> -->
               <div class="clubs-container">
                 <div>
-                  <h4 id="club-1-heading">Young Stars Club</h4>
+                  <h4 class="club-heading red">Young Stars Club</h4>
                   <p>
-                    We have the <strong>Young Stars Club</strong> which meets once a week
+                    We have the <strong class="red">Young Stars Club</strong> which meets once a week
                     on a <em>Saturday between 10:00 and 13:00</em> where you’ll get to explore
                     and experiment with our team of experts.
                   </p>
                   <p>
-                    To find out more about <strong>The Young Stars Club</strong>
+                    To find out more about <strong class="red">The Young Stars Club</strong>
                     and how you can join, send us a message.
                   </p>
                 </div>
@@ -169,14 +169,14 @@
               <hr class="clubs-divider" />
               <div class="clubs-container" id="holiday-club">
                 <div>
-                  <h4 id="club-2-heading">The Holiday Club</h4>
+                  <h4 class="club-heading yellow">The Holiday Club</h4>
                   <p>
-                    During the school holidays we run <strong>The Holiday Club</strong> where
+                    During the school holidays we run <strong class="yellow">The Holiday Club</strong> where
                     you can join other children your age to go on a journey of
                     discovery. Each holiday we pick a new theme to explore.
                   </p>
                   <p>
-                    To find out more about <strong>The Holiday Club</strong>
+                    To find out more about <strong class="yellow">The Holiday Club</strong>
                     and how you can join, send us a message.
                   </p>
                 </div>
