--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
           </div>
           <h2 class="main-sub-heading">— If you need to get in touch with us, please use this form
           </h2> -->
-          <section class="contact-section">
+          <section id="contact-section">
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
@@ -167,7 +167,7 @@
               <button class="button" id="submit-button" type="submit">Submit</button>
             </form>
           </section>
-          <section class="faq-section">
+          <section id="faq-section">
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
@@ -242,7 +242,7 @@
   <footer>
     <div class="footer-wrapper">
       <div class="footer-container fi1">
-        <h3 class="footer-heading">CONNECT:</h3>
+        <h6 class="footer-heading">CONNECT:</h6>
         <ul class="footer-icon-list">
           <li>
             <a href="https://www.facebook.com/"><span class="fa fa-facebook-f footer-icon"></span></a>
@@ -259,7 +259,7 @@
         </ul>
       </div>
       <div class="footer-container">
-        <h3 class="footer-heading">HOURS:</h3>
+        <h6 class="footer-heading">HOURS:</h6>
         <div class="footer-hours-wrapper">
           <ul class="footer-list">
             <li>Monday:</li>
@@ -271,7 +271,7 @@
             <li>Sunday:</li>
           </ul>
           <ul class="footer-list">
-            <li>Closed</li>
+            <li><em>Closed</em></li>
             <li>10:00 - 16:00</li>
             <li>10:00 - 16:00</li>
             <li>10:00 - 16:00</li>
@@ -283,26 +283,22 @@
       </div>
       <div class="footer-container">
         <div>
-          <h3 class="footer-heading">LOCATION:</h3>
+          <h6 class="footer-heading">LOCATION:</h6>
           <p>Nygårdsgaten 112</p>
           <p>5008 Bergen, Norway</p>
         </div>
-        <a href="visit.html#map" class="footer-location-wrapper"><span class="fa fa-map-marker-alt footer-icon"></span>
+        <a href="visit.html#location" class="footer-location-wrapper"><span class="fa fa-map-marker-alt footer-icon"></span>
           <span id="location-link">Getting Here</span>
         </a>
       </div>
       <div class="footer-container">
-        <h3 class="footer-heading">CONTACT & SUPPORT:</h3>
+        <h6 class="footer-heading">USEFUL LINKS:</h6>
         <ul class="footer-list">
+          <li><a href="contact.html#contact-section">Contact</a></li>
           <li><a href="about_us.html">About Us</a></li>
-          <li><a href="visit.html#facilities">Facilities</a></li>
-          <li><a href="contact.html">Contact & FAQ</a></li>
-          <li>
-            <a>Email: contact@cms.com</a>
-          </li>
-          <li>
-            <a>Phone: 500 55 555</a>
-          </li>
+          <li><a href="visit.html#facilities-section">Facilities</a></li>  
+          <li><a href="contact.html#faq-section">FAQ</a></li>
+          <li><a href="visit.html#prices">Prices</a></li>
         </ul>
       </div>
     </div>
