--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             <li>Sunday:</li>
           </ul>
           <ul class="footer-list">
-            <li>Closed</li>
+            <li><em>Closed</em></li>
             <li>10:00 - 16:00</li>
             <li>10:00 - 16:00</li>
             <li>10:00 - 16:00</li>
@@ -382,22 +382,18 @@
           <p>Nygårdsgaten 112</p>
           <p>5008 Bergen, Norway</p>
         </div>
-        <a href="visit.html#map" class="footer-location-wrapper"><span class="fa fa-map-marker-alt footer-icon"></span>
+        <a href="visit.html#location" class="footer-location-wrapper"><span class="fa fa-map-marker-alt footer-icon"></span>
           <span id="location-link">Getting Here</span>
         </a>
       </div>
       <div class="footer-container">
-        <h6 class="footer-heading">CONTACT & SUPPORT:</h6>
+        <h6 class="footer-heading">USEFUL LINKS:</h6>
         <ul class="footer-list">
+          <li><a href="contact.html#contact-section">Contact</a></li>
           <li><a href="about_us.html">About Us</a></li>
-          <li><a href="visit.html#facilities">Facilities</a></li>
-          <li><a href="contact.html">Contact & FAQ</a></li>
-          <li>
-            <a>Email: contact@cms.com</a>
-          </li>
-          <li>
-            <a>Phone: 500 55 555</a>
-          </li>
+          <li><a href="visit.html#facilities-section">Facilities</a></li>  
+          <li><a href="contact.html#faq-section">FAQ</a></li>
+          <li><a href="visit.html#prices">Prices</a></li>
         </ul>
       </div>
     </div>
